# PyPruningRadixTrie

./: .gitignore  LICENSE-MIT.txt  LICENSE.txt  MAINTAINERS  README.md  pyproject.toml
.github/workflows/: pipeline.yml  release.yml
pypruningradixtrie/: entry.py  insert.py  trie.py  trie_node.py
pypruningradixtrie/input/: abstract_input_provider.py  csv_input_provider.py  input.py  json_input_provider.py
test/: non_pruning_radix_trie.py  test_trie_insert.py  test_trie_query.py
test/_resources/: test_data.csv  test_data.json  test_data_complex.csv
